--- a/static/css/style.css
+++ b/static/css/style.css
@@ -84,7 +84,7 @@ h1, h2, h3, h4, h5, h6, figure {
   background: #09C6AB;
 }
 
-.co-container {
+.gtco-container {
   max-width: 1100px;
   position: relative;
   margin: 0 auto;
