--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 {% load static %}
 
+<!-- We'll delete this later -->
 <!DOCTYPE HTML>
 <!--
 	Traveler by freehtml5.co
@@ -47,6 +48,10 @@
 	<!-- Owl Carousel  -->
 	<link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
 	<link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
+
+	<link rel="stylesheet" href="{% static 'css/superfish.css' %}">
+	<link rel="stylesheet" href="{% static 'css/cs-select.css' %}">
+	<link rel="stylesheet" href="{% static 'css/cs-skin-border.css' %}">
 
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="{% static 'css/style.css' %}">
@@ -99,19 +104,18 @@
 
 		</div>
 	</nav>
-
-	<header id="gtco-header" class="gtco-cover gtco-cover-md" role="banner" >
-		<div class="overlay"></div>
+<!--<img src="{% static 'images/home_flight.jpg'%}" width="1700" class="set-bg"	> -->
+	<header id="gtco-header" class="gtco-cover gtco-cover-md" role="banner" style="background-image: url(images/img_bg_2.jpg)">
 		<div class="gtco-container">
 			<div class="row">
-				<div class="col-md-12 col-md-offset-0 text-left">
+				<div class="col-md-12 col-md-offset-0 text-center">
 
 
 					<div class="row row-mt-15em">
 						<div class="col-md-7 mt-text animate-box" data-animate-effect="fadeInUp">
 							<h1>Planing Trip To Anywhere in The World?</h1>
 						</div>
-						<div class="col-md-4 col-md-push-1 animate-box" data-animate-effect="fadeInRight">
+						<div class="col-sm-5 col-md-4 animate-box" data-animate-effect="fadeInRight">
 							<div class="form-wrap">
 								<div class="tab">
 
@@ -119,48 +123,76 @@
 										<div class="tab-content-inner active" data-content="signup">
 											<h3>Book Your Trip</h3>
 											<form action="#">
-												<div class="row form-group">
-													<div class="col-md-12">
-														<label for="fullname">Your Name</label>
-														<input type="text" id="fullname" class="form-control">
-													</div>
+											<div class="row form-group">
+											<div class="col-xxs-12 col-xs-6 mt">
+												<div class=" input-field">
+													<label for="from-place">From:</label>
+													<input type="text" class="form-control" id="from-place" placeholder="Los Angeles, USA"/>
 												</div>
-												<div class="row form-group">
-													<div class="col-md-12">
-														<label for="activities">Activities</label>
-														<select name="#" id="activities" class="form-control">
-															<option value="">Activities</option>
-															<option value="">Hiking</option>
-															<option value="">Caving</option>
-															<option value="">Swimming</option>
-														</select>
-													</div>
+											</div>
+											<div class="col-xxs-12 col-xs-6 mt">
+												<div class="input-field">
+													<label for="to-place">To:</label>
+													<input type="text" class="form-control" id="to-place" placeholder="Tokyo, Japan"/>
 												</div>
-												<div class="row form-group">
-													<div class="col-md-12">
-														<label for="destination">Destination</label>
-														<select name="#" id="destination" class="form-control">
-															<option value="">Philippines</option>
-															<option value="">USA</option>
-															<option value="">Australia</option>
-															<option value="">Singapore</option>
-														</select>
-													</div>
-												</div>
+											</div>
 
-												<div class="row form-group">
-													<div class="col-md-12">
-														<label for="date-start">Date Travel</label>
-														<input type="text" id="date-start" class="form-control">
-													</div>
-												</div>
 
-												<div class="row form-group">
-													<div class="col-md-12">
-														<input type="submit" class="btn btn-primary btn-block" value="Submit">
-													</div>
+												<div class="col-xxs-12 col-xs-6 mt alternate">
+												<div class="input-field">
+													<label >Date of Departure:</label>
+													<input type="text" class="form-control" id="date-start" placeholder="mm/dd/yyyy"/>
 												</div>
+											</div>
+
+											<div class=" col-xxs-12 col-xs-6 mt alternate">
+												<section>
+													<label for="class">Class:</label>
+													<br>
+													<select class="form-control">
+														<option value="" disabled selected>Economy</option>
+														<option value="economy">Economy</option>
+														<option value="first">First</option>
+														<option value="business">Business</option>
+													</select>
+												</section>
+											</div>
+											<div class="col-xxs-12 col-xs-6 mt alternate">
+												<section>
+													<label for="class">Adults:</label>
+													<br>
+													<select class="form-control">
+														<option value="" disabled selected>1</option>
+														<option value="1">1</option>
+														<option value="2">2</option>
+														<option value="3">3</option>
+														<option value="4">4</option>
+													</select>
+												</section>
+											</div>
+											<div class="col-xxs-12 col-xs-6 mt alternate">
+												<section>
+													<label for="class">Children:</label>
+													<select class="form-control">
+														<option value="" disabled selected>1</option>
+														<option value="1">1</option>
+														<option value="2">2</option>
+														<option value="3">3</option>
+														<option value="4">4</option>
+													</select>
+												</section>
+											</div>
+
+											<div class="col-xs-12">
+												<br>
+												<input type="submit" class="btn btn-primary btn-block" value="Search Flight">
+											</div>
+										</div>
+
+
+
 											</form>
+											</div>
 										</div>
 
 
@@ -168,13 +200,14 @@
 								</div>
 							</div>
 						</div>
-					</div>
 
+				</div>
 
 				</div>
 			</div>
 		</div>
 	</header>
+
 
 	<div class="gtco-section">
 		<div class="gtco-container">
@@ -487,6 +520,10 @@
 	<script src="{% static 'js/owl.carousel.min.js' %}"></script>
 	<!-- countTo -->
 	<script src="{% static 'js/jquery.countTo.js' %}"></script>
+	<script src="{% static 'js/sticky.js' %}"></script>
+	<script src="{% static 'js/hoverIntent.js' %}"></script>
+	<script src="{% static 'js/superfish.js' %}"></script>
+
 
 	<!-- Stellar Parallax -->
 	<script src="{% static 'js/jquery.stellar.min.js' %}"></script>
@@ -504,3 +541,4 @@
 
 	</body>
 </html>
+
