Sample destination img added, Signup UI improved

--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -8,10 +8,13 @@
 {% block content %}
 
 <header class="header">
-  <div class="container-fluid">
+  <div class="container">
     <div class="row">
       <div class="col-12">
-        <h1>{% trans "Sign Up" %}</h1>
+        <br>
+        <br>
+
+        <h1 class="sign-in">{% trans "Sign Up" %}</h1>
 
         <p>{% blocktrans %}Already have an account or want to login through your Facebook or Ashoka Google Account? Then
           please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
