--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -8,7 +8,7 @@
 {% block content %}
 
 <header class="header">
-  <div class="container-fluid sign-in">
+  <div class="container sign-in">
     <center>
       <br>
       <h1>{% trans "Sign Out" %}</h1><br>
