--- a/templates/index.html
+++ b/templates/index.html
@@ -7,21 +7,23 @@
 	URL: http://freehtml5.co
 -->
 <html>
-	<head>
+
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Traveler</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
+	<meta name="keywords"
+		content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FreeHTML5.co" />
 
-  	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
+	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content="" />
+	<meta property="og:image" content="" />
+	<meta property="og:url" content="" />
+	<meta property="og:site_name" content="" />
+	<meta property="og:description" content="" />
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
@@ -58,134 +60,141 @@
 	<script src="{% static 'js/respond.min.js' %}"></script>
 	<![endif]-->
 
-	</head>
-	<body>
+</head>
+
+<body>
 
 
 	<div id="page">
 
 
-	<!-- <div class="page-inner"> -->
-	<nav class="gtco-nav" role="navigation">
-		<div class="gtco-container">
+		<!-- <div class="page-inner"> -->
+		<nav class="gtco-nav" role="navigation">
+			<div class="gtco-container">
 
-			<div class="row">
-				<div class="col-sm-4 col-xs-12">
-					<div id="gtco-logo"><a href="index.html">Traveler <em>.</em></a></div>
+				<div class="row">
+					<div class="col-sm-4 col-xs-12">
+						<div id="gtco-logo"><a href="index.html">Traveler <em>.</em></a></div>
+					</div>
+					<div class="col-xs-8 text-right menu-1">
+						<ul>
+							<li><a href="destination.html">Destination</a></li>
+							<li class="has-dropdown">
+								<a href="#">Travel</a>
+								<ul class="dropdown">
+									<li><a href="#">Europe</a></li>
+									<li><a href="#">Asia</a></li>
+									<li><a href="#">America</a></li>
+									<li><a href="#">Canada</a></li>
+								</ul>
+							</li>
+							<li><a href="pricing.html">Pricing</a></li>
+							<li><a href="contact.html">Contact</a></li>
+							{% if request.user.is_authenticated %}
+							<li><a href="{%url 'account_logout'%}">Logout</a></li>
+							{% else %}
+							<li><a href="{%url 'account_login'%}">Login</a>/<a
+									href="{%url 'account_signup'%}">Register</a></li>
+							{% endif %}
+						</ul>
+					</div>
 				</div>
-				<div class="col-xs-8 text-right menu-1">
-					<ul>
-						<li><a href="destination.html">Destination</a></li>
-						<li class="has-dropdown">
-							<a href="#">Travel</a>
-							<ul class="dropdown">
-								<li><a href="#">Europe</a></li>
-								<li><a href="#">Asia</a></li>
-								<li><a href="#">America</a></li>
-								<li><a href="#">Canada</a></li>
-							</ul>
-						</li>
-						<li><a href="pricing.html">Pricing</a></li>
-						<li><a href="contact.html">Contact</a></li>
-						{% if request.user.is_authenticated %}
-						<li><a href="{%url 'account_logout'%}">Logout</a></li>
-						{% else %}
-						<li><a href="{%url 'account_login'%}">Login</a>/<a href="{%url 'account_signup'%}">Register</a></li>
-						{% endif %}
-					</ul>
-				</div>
+
 			</div>
-
-		</div>
-	</nav>
-<!--<img src="{% static 'images/home_flight.jpg'%}" width="1700" class="set-bg"	> -->
-	<header id="gtco-header" class="gtco-cover gtco-cover-md" role="banner" style="background-image: url(/static/images/home_flight.jpg)">
-		<div class="gtco-container">
-			<div class="row">
-				<div class="col-md-12 col-md-offset-0 text-left">
-
-
-					<div class="row row-mt-15em">
-						<div class="col-md-7 mt-text animate-box" data-animate-effect="fadeInUp">
-							<h1><b>Planning On Going Anywhere Across The Globe?</b></h1>
-						</div>
-						<div class="col-sm-5 col-md-4 animate-box" data-animate-effect="fadeInRight">
-							<div class="form-wrap">
-								<div class="tab">
-
-									<div class="tab-content">
-										<div class="tab-content-inner active" data-content="signup">
-											<h3>Book Your Trip</h3>
-											<form action="#">
-											<div class="row form-group">
-											<div class="col-xxs-12 col-xs-12 mt">
-												<div class=" input-field">
-													<label for="from-place">From:</label>
-													<input type="text" class="form-control" id="from-place" placeholder="Los Angeles, USA"/>
-												</div>
-											</div>
-											<div class="col-xxs-12 col-xs-12 mt">
-												<div class="input-field">
-													<label for="to-place">To:</label>
-													<input type="text" class="form-control" id="to-place" placeholder="Tokyo, Japan"/>
-												</div>
-											</div>
+		</nav>
+		<!--<img src="{% static 'images/home_flight.jpg'%}" width="1700" class="set-bg"	> -->
+		<header id="gtco-header" class="gtco-cover gtco-cover-md" role="banner"
+			style="background-image: url(/static/images/home_flight.jpg)">
+			<div class="gtco-container">
+				<div class="row">
+					<div class="col-md-12 col-md-offset-0 text-left">
 
 
-												<div class="col-xxs-12 col-xs-12 mt alternate">
-												<div class="input-field">
-													<label >Date of Departure:</label>
-													<input type="text" class="form-control" id="date-start" placeholder="mm/dd/yyyy"/>
-												</div>
-											</div>
+						<div class="row row-mt-15em">
+							<div class="col-md-7 mt-text animate-box" data-animate-effect="fadeInUp">
+								<h1><b>Planning On Going Anywhere Across The Globe?</b></h1>
+							</div>
+							<div class="col-sm-5 col-md-4 animate-box" data-animate-effect="fadeInRight">
+								<div class="form-wrap">
+									<div class="tab">
 
-											<div class=" col-xxs-12 col-xs-6 mt alternate">
-												<section>
-													<label for="class">Class:</label>
-													<br>
-													<select class="form-control">
-														<option value="" disabled selected>Economy</option>
-														<option value="economy">Economy</option>
-														<option value="first">First</option>
-														<option value="business">Business</option>
-													</select>
-												</section>
-											</div>
-											<div class="col-xxs-12 col-xs-6 mt alternate">
-												<section>
-													<label for="class">Adults:</label>
-													<br>
-													<select class="form-control">
-														<option value="" disabled selected>1</option>
-														<option value="1">1</option>
-														<option value="2">2</option>
-														<option value="3">3</option>
-														<option value="4">4</option>
-													</select>
-												</section>
-											</div>
-											<div class="col-xxs-12 col-xs-6 mt alternate">
-												<section>
-													<label for="class">Children:</label>
-													<select class="form-control">
-														<option value="" disabled selected>1</option>
-														<option value="1">1</option>
-														<option value="2">2</option>
-														<option value="3">3</option>
-														<option value="4">4</option>
-													</select>
-												</section>
-											</div>
-
-											<div class="col-xs-12">
-												<br>
-												<input type="submit" class="btn btn-primary btn-block" value="Search Flight">
-											</div>
-										</div>
+										<div class="tab-content">
+											<div class="tab-content-inner active" data-content="signup">
+												<h3>Book Your Trip</h3>
+												<form action="#">
+													<div class="row form-group">
+														<div class="col-xxs-12 col-xs-12 mt">
+															<div class=" input-field">
+																<label for="from-place">From:</label>
+																<input type="text" class="form-control" id="from-place"
+																	placeholder="Los Angeles, USA" />
+															</div>
+														</div>
+														<div class="col-xxs-12 col-xs-12 mt">
+															<div class="input-field">
+																<label for="to-place">To:</label>
+																<input type="text" class="form-control" id="to-place"
+																	placeholder="Tokyo, Japan" />
+															</div>
+														</div>
 
 
+														<div class="col-xxs-12 col-xs-12 mt alternate">
+															<div class="input-field">
+																<label>Date of Departure:</label>
+																<input type="text" class="form-control" id="date-start"
+																	placeholder="mm/dd/yyyy" />
+															</div>
+														</div>
 
-											</form>
+														<div class=" col-xxs-12 col-xs-6 mt alternate">
+															<section>
+																<label for="class">Class:</label>
+																<br>
+																<select class="form-control">
+																	<option value="" disabled selected>Economy</option>
+																	<option value="economy">Economy</option>
+																	<option value="first">First</option>
+																	<option value="business">Business</option>
+																</select>
+															</section>
+														</div>
+														<div class="col-xxs-12 col-xs-6 mt alternate">
+															<section>
+																<label for="class">Adults:</label>
+																<br>
+																<select class="form-control">
+																	<option value="" disabled selected>1</option>
+																	<option value="1">1</option>
+																	<option value="2">2</option>
+																	<option value="3">3</option>
+																	<option value="4">4</option>
+																</select>
+															</section>
+														</div>
+														<div class="col-xxs-12 col-xs-6 mt alternate">
+															<section>
+																<label for="class">Children:</label>
+																<select class="form-control">
+																	<option value="" disabled selected>1</option>
+																	<option value="1">1</option>
+																	<option value="2">2</option>
+																	<option value="3">3</option>
+																	<option value="4">4</option>
+																</select>
+															</section>
+														</div>
+
+														<div class="col-xs-12">
+															<br>
+															<input type="submit" class="btn btn-primary btn-block"
+																value="Search Flight">
+														</div>
+													</div>
+
+
+
+												</form>
 											</div>
 										</div>
 
@@ -195,11 +204,11 @@
 							</div>
 						</div>
 
-				</div>
+					</div>
 
 				</div>
 			</div>
-		</div>
+	</div>
 	</header>
 
 
@@ -207,17 +216,18 @@
 		<div class="gtco-container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
-					<h2>Most Popular Destination</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<h2>Most Popular Destinations</h2>
+					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident.
+						Odit ab aliquam dolor eius.</p>
 				</div>
 			</div>
 			<div class="row">
 
 				<div class="col-lg-4 col-md-4 col-sm-6">
-					<a href="{% static 'images/img_1.jpg' %}" class="fh5co-card-item image-popup">
+					<a href="{% static 'images/rsz_new_york.jpg' %}" class="fh5co-card-item image-popup">
 						<figure>
 							<div class="overlay"><i class="ti-plus"></i></div>
-							<img src="{% static 'images/img_1.jpg' %}" alt="Image" class="img-responsive">
+							<img src="{% static 'images/rsz_new_york.jpg' %}" alt="Image" class="img-responsive">
 						</figure>
 						<div class="fh5co-text">
 							<h2>New York, USA</h2>
@@ -227,10 +237,10 @@
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-6">
-					<a href="{% static 'images/img_2.jpg' %}" class="fh5co-card-item image-popup">
+					<a href="{% static 'images/seoul.jpg' %}" class="fh5co-card-item image-popup">
 						<figure>
 							<div class="overlay"><i class="ti-plus"></i></div>
-							<img src="{% static 'images/img_2.jpg' %}" alt="Image" class="img-responsive">
+							<img src="{% static 'images/seoul.jpg' %}" alt="Image" class="img-responsive">
 						</figure>
 						<div class="fh5co-text">
 							<h2>Seoul, South Korea</h2>
@@ -240,10 +250,10 @@
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-6">
-					<a href="{% static 'images/img_3.jpg' %}" class="fh5co-card-item image-popup">
+					<a href="{% static 'images/paris.jpg' %}" class="fh5co-card-item image-popup">
 						<figure>
 							<div class="overlay"><i class="ti-plus"></i></div>
-							<img src="{% static 'images/img_3.jpg' %}" alt="Image" class="img-responsive">
+							<img src="{% static 'images/paris.jpg' %}" alt="Image" class="img-responsive">
 						</figure>
 						<div class="fh5co-text">
 							<h2>Paris, France</h2>
@@ -305,7 +315,8 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading animate-box">
 					<h2>How It Works</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident.
+						Odit ab aliquam dolor eius.</p>
 				</div>
 			</div>
 			<div class="row">
@@ -315,7 +326,8 @@
 							<i>1</i>
 						</span>
 						<h3>Lorem ipsum dolor sit amet</h3>
-						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem
+							provident. Odit ab aliquam dolor eius.</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-6">
@@ -324,7 +336,8 @@
 							<i>2</i>
 						</span>
 						<h3>Consectetur adipisicing elit</h3>
-						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem
+							provident. Odit ab aliquam dolor eius.</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-6">
@@ -333,7 +346,8 @@
 							<i>3</i>
 						</span>
 						<h3>Dignissimos asperiores vitae</h3>
-						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem
+							provident. Odit ab aliquam dolor eius.</p>
 					</div>
 				</div>
 
@@ -360,7 +374,8 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading animate-box">
 					<h2>Our Success</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident.
+						Odit ab aliquam dolor eius.</p>
 				</div>
 			</div>
 
@@ -368,26 +383,30 @@
 
 				<div class="col-md-3 col-sm-6 animate-box" data-animate-effect="fadeInUp">
 					<div class="feature-center">
-						<span class="counter js-counter" data-from="0" data-to="196" data-speed="5000" data-refresh-interval="50">1</span>
+						<span class="counter js-counter" data-from="0" data-to="196" data-speed="5000"
+							data-refresh-interval="50">1</span>
 						<span class="counter-label">Destination</span>
 
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6 animate-box" data-animate-effect="fadeInUp">
 					<div class="feature-center">
-						<span class="counter js-counter" data-from="0" data-to="97" data-speed="5000" data-refresh-interval="50">1</span>
+						<span class="counter js-counter" data-from="0" data-to="97" data-speed="5000"
+							data-refresh-interval="50">1</span>
 						<span class="counter-label">Hotels</span>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6 animate-box" data-animate-effect="fadeInUp">
 					<div class="feature-center">
-						<span class="counter js-counter" data-from="0" data-to="12402" data-speed="5000" data-refresh-interval="50">1</span>
+						<span class="counter js-counter" data-from="0" data-to="12402" data-speed="5000"
+							data-refresh-interval="50">1</span>
 						<span class="counter-label">Travelers</span>
 					</div>
 				</div>
 				<div class="col-md-3 col-sm-6 animate-box" data-animate-effect="fadeInUp">
 					<div class="feature-center">
-						<span class="counter js-counter" data-from="0" data-to="12202" data-speed="5000" data-refresh-interval="50">1</span>
+						<span class="counter js-counter" data-from="0" data-to="12202" data-speed="5000"
+							data-refresh-interval="50">1</span>
 						<span class="counter-label">Happy Customer</span>
 
 					</div>
@@ -432,7 +451,9 @@
 				<div class="col-md-4">
 					<div class="gtco-widget">
 						<h3>About Us</h3>
-						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore eos molestias quod sint ipsum possimus temporibus officia iste perspiciatis consectetur in fugiat repudiandae cum. Totam cupiditate nostrum ut neque ab?</p>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore eos molestias quod sint
+							ipsum possimus temporibus officia iste perspiciatis consectetur in fugiat repudiandae cum.
+							Totam cupiditate nostrum ut neque ab?</p>
 					</div>
 				</div>
 
@@ -479,15 +500,17 @@
 				<div class="col-md-12">
 					<p class="pull-left">
 						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small>
-						<small class="block">Designed by <a href="https://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.com/" target="_blank">Unsplash</a></small>
+						<small class="block">Designed by <a href="https://freehtml5.co/"
+								target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.com/"
+								target="_blank">Unsplash</a></small>
 					</p>
 					<p class="pull-right">
-						<ul class="gtco-social-icons pull-right">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
-						</ul>
+					<ul class="gtco-social-icons pull-right">
+						<li><a href="#"><i class="icon-twitter"></i></a></li>
+						<li><a href="#"><i class="icon-facebook"></i></a></li>
+						<li><a href="#"><i class="icon-linkedin"></i></a></li>
+						<li><a href="#"><i class="icon-dribbble"></i></a></li>
+					</ul>
 					</p>
 				</div>
 			</div>
@@ -533,6 +556,6 @@
 	<!-- Main -->
 	<script src="{% static 'js/main.js' %}"></script>
 
-	</body>
-</html>
+</body>
 
+</html>
