More sample images added

--- a/templates/index.html
+++ b/templates/index.html
@@ -265,10 +265,10 @@
 
 
 				<div class="col-lg-4 col-md-4 col-sm-6">
-					<a href="{% static 'images/img_4.jpg' %}" class="fh5co-card-item image-popup">
+					<a href="{% static 'images/sydney.jpg' %}" class="fh5co-card-item image-popup">
 						<figure>
 							<div class="overlay"><i class="ti-plus"></i></div>
-							<img src="{% static 'images/img_4.jpg' %}" alt="Image" class="img-responsive">
+							<img src="{% static 'images/sydney.jpg' %}" alt="Image" class="img-responsive">
 						</figure>
 						<div class="fh5co-text">
 							<h2>Sydney, Australia</h2>
@@ -279,10 +279,10 @@
 				</div>
 
 				<div class="col-lg-4 col-md-4 col-sm-6">
-					<a href="{% static 'images/img_5.jpg' %}" class="fh5co-card-item image-popup">
+					<a href="{% static 'images/greece.jpg' %}" class="fh5co-card-item image-popup">
 						<figure>
 							<div class="overlay"><i class="ti-plus"></i></div>
-							<img src="{% static 'images/img_5.jpg' %}" alt="Image" class="img-responsive">
+							<img src="{% static 'images/greece.jpg' %}" alt="Image" class="img-responsive">
 						</figure>
 						<div class="fh5co-text">
 							<h2>Greece, Europe</h2>
@@ -293,10 +293,10 @@
 				</div>
 
 				<div class="col-lg-4 col-md-4 col-sm-6">
-					<a href="{% static 'images/img_6.jpg' %}" class="fh5co-card-item image-popup">
+					<a href="{% static 'images/spain' %}" class="fh5co-card-item image-popup">
 						<figure>
 							<div class="overlay"><i class="ti-plus"></i></div>
-							<img src="{% static 'images/img_6.jpg' %}" alt="Image" class="img-responsive">
+							<img src="{% static 'images/spain.jpg' %}" alt="Image" class="img-responsive">
 						</figure>
 						<div class="fh5co-text">
 							<h2>Spain, Europe</h2>
