Search UI modified, minor other changes

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -17,7 +17,7 @@
         <h1 class="sign-in">{% trans "Sign In" %}</h1>
 
         <h3><a href="{{ signup_url }}">Sign up</a>
-          for a Traveler account and sign in below:</h3>
+          for a Travoyage account and sign in below:</h3>
 
         <form class="login" method="POST" action="{% url 'account_login' %}">
           {% csrf_token %}
