--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -16,7 +16,7 @@
 
         <h1 class="sign-in">{% trans "Sign Up" %}</h1>
 
-        <p>{% blocktrans %}Already have an account or want to login through your Facebook or Ashoka Google Account? Then
+        <p>{% blocktrans %}Already have an account or want to login through your Ashoka Google Account? Then
           please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
         <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
