--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
 <html>
 	<head>
 	<meta charset="utf-8">
+		<title>Travoyage</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
@@ -70,7 +71,7 @@
 
 			<div class="row">
 				<div class="col-sm-4 col-xs-12">
-					<div id="gtco-logo"><a href="index.html">Traveler <em>.</em></a></div>
+					<div id="gtco-logo"><a href="index.html">Travoyage <em>.</em></a></div>
 				</div>
 				<div class="col-xs-8 text-right menu-1">
 					<ul>
