--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Traveler</title>
+	<title>Travoyage</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
 	<meta name="keywords"
@@ -74,7 +74,7 @@
 
 				<div class="row">
 					<div class="col-sm-4 col-xs-12">
-						<div id="gtco-logo"><a href="index.html">Traveler <em>.</em></a></div>
+						<div id="gtco-logo"><a href="index.html">Travoyage <em>.</em></a></div>
 					</div>
 					<div class="col-xs-8 text-right menu-1">
 						<ul>
@@ -114,13 +114,14 @@
 							<div class="col-md-7 mt-text animate-box" data-animate-effect="fadeInUp">
 								<h1><b>Planning On Going Anywhere Across The Globe?</b></h1>
 							</div>
-							<div class="col-sm-5 col-md-4 animate-box" data-animate-effect="fadeInRight">
+							<div class="col-sm-5 col-md-5 animate-box" data-animate-effect="fadeInRight">
 								<div class="form-wrap">
+
 									<div class="tab">
 
 										<div class="tab-content">
-											<div class="tab-content-inner active" data-content="signup">
-												<h3>Book Your Trip</h3>
+											<div role="tabpanel" class="tab-content-inner active" id="flights">
+												<h3>Book Your Flight</h3>
 												<form action="#">
 													<div class="row form-group">
 														<div class="col-xxs-12 col-xs-12 mt">
