--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,6 +1,9 @@
 {% extends "account/base.html" %}
 
+{% load socialaccount %}
+{% providers_media_js %}
 {% load i18n %}
+{% load account socialaccount %}
 {% load crispy_forms_tags %}
 
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
@@ -16,8 +19,10 @@
 
         <h1 class="sign-in">{% trans "Sign In" %}</h1>
 
-        <h3><a href="{{ signup_url }}">Sign up</a>
+        <h3>Please login with a <a href="{% provider_login_url "google" %}">Google Account</a> or <a href="{{ signup_url }}">Sign up</a>
           for a Travoyage account and sign in below:</h3>
+
+        <div></i></div>
 
         <form class="login" method="POST" action="{% url 'account_login' %}">
           {% csrf_token %}
