--- a/templates/flights_results.html
+++ b/templates/flights_results.html
@@ -45,7 +45,18 @@
 						</div>
 					</a>
 				</div>
-
+				{% for flight in object_list %}
+					<div class="col-lg-12 col-md-4 col-sm-6">
+					<a class="fh5co-card-item ">
+						<div class="fh5co-text">
+							<h2 align="left">{{flight.flight_no}}, {{flight.airline}}</h2>
+							<p align="left">Departure: {{flight.start}}, {{flight.start_time}}  </p>
+                            <p align="left"> To: {{flight.destination}}, {{flight.arrival_time}}</p>
+							<p align="right"><span class="btn btn-primary">Schedule a Trip</span></p>
+						</div>
+					</a>
+				</div>
+				{% endfor %}
 			</div>
 		</div>
 	</div>
