Flight date added

--- a/templates/flights_results.html
+++ b/templates/flights_results.html
@@ -40,6 +40,7 @@
 					<a class="fh5co-card-item ">
 						<div class="fh5co-text">
 							<h2 align="left">{{flight.flight_no}}, {{flight.airline}}</h2>
+							<p align="left">{{flight.date}}</p>
 							<p align="left">Departure: {{flight.start}}, {{flight.start_time}}  </p>
                             <p align="left"> To: {{flight.destination}}, {{flight.arrival_time}}</p>
 							<p align="right"><a class="btn btn-primary" href="{{flight.get_abs_url}}">Book</a></p>
