--- a/templates/flights_results.html
+++ b/templates/flights_results.html
@@ -34,7 +34,7 @@
 					<h3>Search Results: </h3>
 				</div>
 			<div class="row">
-
+				{% if object_list %}
 				{% for flight in object_list %}
 					<div class="col-lg-12 col-md-4 col-sm-6">
 					<a class="fh5co-card-item ">
@@ -48,6 +48,9 @@
 					</a>
 				</div>
 				{% endfor %}
+				{% else %}
+					<p>Sorry, there are no such flights available, please modify the details and try again.</p>
+				{% endif %}
 			</div>
 		</div>
 	</div>
