Search - more detailed

--- a/templates/index.html
+++ b/templates/index.html
@@ -169,32 +169,42 @@
 																	<option value="business">Business</option>
 																</select>
 															</section>
-														</div>
+														</div> -->
 														<div class="col-xxs-12 col-xs-6 mt alternate">
 															<section>
-																<label for="class">Adults:</label>
+																<label>Adults:</label>
 																<br>
-																<select class="form-control">
-																	<option value="" disabled selected>1</option>
+
+																<input class="form-control" list="numbers" size="22" name="adults" type="text"
+                                								placeholder="1">
+                            									<datalist id="numbers">
+                                								<option value="" disabled selected>1</option>
+																	<option value="0">0</option>
 																	<option value="1">1</option>
 																	<option value="2">2</option>
 																	<option value="3">3</option>
 																	<option value="4">4</option>
-																</select>
+                            									</datalist>
 															</section>
 														</div>
 														<div class="col-xxs-12 col-xs-6 mt alternate">
 															<section>
-																<label for="class">Children:</label>
-																<select class="form-control">
-																	<option value="" disabled selected>1</option>
+																<label>Children:</label>
+																<br>
+
+
+																<input class="form-control" list="numbers" size="22" name="children" type="text"
+                                								placeholder="1">
+                            									<datalist id="numbers">
+                                								<option value="" disabled selected>1</option>
+																	<option value="0">0</option>
 																	<option value="1">1</option>
 																	<option value="2">2</option>
 																	<option value="3">3</option>
 																	<option value="4">4</option>
-																</select>
+                            									</datalist>
 															</section>
-														</div>  -->
+														</div>
 
 														<div class="col-xs-12">
 															<br>
