--- a/templates/index.html
+++ b/templates/index.html
@@ -175,11 +175,10 @@
 																<br>
 
 																<input class="form-control" list="numbers" size="22" name="adults" type="text"
-                                								placeholder="1">
+                                								placeholder="1" >
                             									<datalist id="numbers">
-                                								<option value="" disabled selected>1</option>
-																	<option value="0">0</option>
-																	<option value="1">1</option>
+                                									<option value="0">0</option>
+																	<option value="1" >1</option>
 																	<option value="2">2</option>
 																	<option value="3">3</option>
 																	<option value="4">4</option>
@@ -193,11 +192,10 @@
 
 
 																<input class="form-control" list="numbers" size="22" name="children" type="text"
-                                								placeholder="1">
+                                								placeholder="1" >
                             									<datalist id="numbers">
-                                								<option value="" disabled selected>1</option>
 																	<option value="0">0</option>
-																	<option value="1">1</option>
+																	<option selected="selected" value="1">1</option>
 																	<option value="2">2</option>
 																	<option value="3">3</option>
 																	<option value="4">4</option>
