Payment page added, booking modified

--- a/templates/index.html
+++ b/templates/index.html
@@ -174,15 +174,8 @@
 																<label>Adults:</label>
 																<br>
 
-																<input class="form-control" list="numbers" size="22" name="adults" type="text"
+																<input class="form-control" size="22" name="adults" type="number" min="0"
                                 								placeholder="1" >
-                            									<datalist id="numbers">
-                                									<option value="0">0</option>
-																	<option value="1" >1</option>
-																	<option value="2">2</option>
-																	<option value="3">3</option>
-																	<option value="4">4</option>
-                            									</datalist>
 															</section>
 														</div>
 														<div class="col-xxs-12 col-xs-6 mt alternate">
@@ -191,15 +184,9 @@
 																<br>
 
 
-																<input class="form-control" list="numbers" size="22" name="children" type="text"
+																<input class="form-control" size="22" name="children" type="number" min="0"
                                 								placeholder="1" >
-                            									<datalist id="numbers">
-																	<option value="0">0</option>
-																	<option selected="selected" value="1">1</option>
-																	<option value="2">2</option>
-																	<option value="3">3</option>
-																	<option value="4">4</option>
-                            									</datalist>
+
 															</section>
 														</div>
 
