--- a/templates/base.html
+++ b/templates/base.html
@@ -65,16 +65,15 @@
 <body>
 
 	<div id="page">
-
-
+		
 	<!-- <div class="page-inner"> -->
 	<nav class="gtco-nav" role="navigation">
 		<div class="gtco-container">
 
 			<div class="row">
 				<div class="col-sm-4 col-xs-12">
-					<div id="gtco-logo"><a href="/index.html">Travoyage <em>.</em></a></div>
-				</div>
+						<div id="trav-logo"><a href="index.html"><img src="{% static 'images/rsz_travoyage.png' %}"></a></div>
+					</div>
 				<div class="col-xs-8 text-right menu-1">
 					<ul>
 						<li><a href="/destination.html">Destination</a></li>
@@ -102,6 +101,18 @@
 	</nav>
 
     {% block content  %}
+		{% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}" role="alert">
+            {{ message }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        {% endfor %}
+    </ul>
+    {% endif %}
     {% endblock content %}
 
 		<footer id="gtco-footer" role="contentinfo">
