--- a/static/css/style_from_ecomm.css
+++ b/static/css/style_from_ecomm.css
@@ -274,3 +274,14 @@ input[type=text] {
   background-color: white;
   color: black;
 }
+
+input[type=message] {
+  width: 80%;
+  padding: 6px 6px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 2px solid #c295d8;
+  border-radius: 4px;
+  background-color: white;
+  color: black;
+}
