--- a/templates/contact.html
+++ b/templates/contact.html
@@ -11,10 +11,12 @@
 		<div class="overlay"></div>
 		<div class="gtco-container">
 			<div class="row">
-				<div class="col-md-12 col-md-offset-0 text-left">
+				<div class="col-md-12 col-md-offset-0 text-center">
 					<div class="row row-mt-15em">
 
-						<div class="col-md-7 mt-text animate-box" data-animate-effect="fadeInUp">
+						<div class="col-md-12 mt-text animate-box" data-animate-effect="fadeInUp" style="
+    margin-top: 80px;
+">
 							<span class="intro-text-small">Don't be shy</span>
 							<h1>Get In Touch</h1>	
 						</div>
@@ -37,7 +39,7 @@
 						<div class="row form-group">
 							<div class="col-md-12">
 								<label class="sr-only" for="name">Name</label>
-								<input type="text" id="name" class="form-control" placeholder="Your firstname">
+								<input type="text" id="name" class="form-control" placeholder="Your first name">
 							</div>
 							
 						</div>
@@ -59,7 +61,7 @@
 						<div class="row form-group">
 							<div class="col-md-12">
 								<label class="sr-only" for="message">Message</label>
-								<textarea name="message" id="message" cols="30" rows="10" class="form-control" placeholder="Write us something"></textarea>
+								<textarea name="message" id="message" cols="30" rows="10" class="form-control" placeholder="Write us something" style="border: 2px solid #c295d8;" ></textarea>
 							</div>
 						</div>
 						<div class="form-group">
@@ -76,7 +78,7 @@
 							<li class="address"><p>India - Ashoka University, Rajiv Gandhi Education City, Sonipat, Haryana 131029</p>
                                     <p>Headquarters - Saddle River, New Jersey, 07458, USA</p></li>
 							<li class="phone"><p><span>111-111-1111</span><span>222-222-2222</span></p></li>
-							<li class="email"><p>Support.poshpixie@woohoo.com</p></li>
+							<li class="email"><p>support@travoyage.com</p></li>
 						</ul>
 					</div>
 
