--- a/templates/details_confirmation.html
+++ b/templates/details_confirmation.html
@@ -13,7 +13,7 @@
 					<div class="row row-mt-15em">
 
 						<div class="col-md-12 mt-text animate-box" data-animate-effect="fadeInUp">
-							<h1>Details Conformation</h1>
+							<h1>Details Confirmation</h1>
 						</div>
 
 					</div>
