--- a/templates/index.html
+++ b/templates/index.html
@@ -158,18 +158,16 @@
 															</div>
 														</div> -->
 
-													<!--	<div class=" col-xxs-12 col-xs-6 mt alternate">
+														<div class=" col-xxs-12 col-xs-6 mt alternate">
 															<section>
 																<label for="class">Class:</label>
 																<br>
-																<select class="form-control">
-																	<option value="" disabled selected>Economy</option>
+																<select class="form-control" name="class">
 																	<option value="economy">Economy</option>
 																	<option value="first">First</option>
-																	<option value="business">Business</option>
 																</select>
 															</section>
-														</div> -->
+														</div>
 														<div class="col-xxs-12 col-xs-6 mt alternate">
 															<section>
 																<label>Adults:</label>
