Some UI changes(primarily home)

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -77,7 +77,7 @@
 						<ul>
 							<li class="address"><p>India - Ashoka University, Rajiv Gandhi Education City, Sonipat, Haryana 131029</p>
                                     <p>Headquarters - Saddle River, New Jersey, 07458, USA</p></li>
-							<li class="phone"><p><span>111-111-1111</span><span>222-222-2222</span></p></li>
+							<li class="phone"><p><span>111-111-1111</span> / <span>222-222-2222</span></p></li>
 							<li class="email"><p>support@travoyage.com</p></li>
 						</ul>
 					</div>
