--- a/templates/base.html
+++ b/templates/base.html
@@ -77,20 +77,11 @@
 				<div class="col-xs-8 text-right menu-1">
 					<ul>
 						<li><a href="/destination.html">Destination</a></li>
-						<li class="has-dropdown">
-							<a href="#">Travel</a>
-							<ul class="dropdown">
-								<li><a href="#">Europe</a></li>
-								<li><a href="#">Asia</a></li>
-								<li><a href="#">America</a></li>
-								<li><a href="#">Canada</a></li>
-							</ul>
-						</li>
 						<li><a href="/pricing.html">Pricing</a></li>
 						<li><a href="/contact.html">Contact</a></li>
 						{% if request.user.is_authenticated %}
-						<li><a href="{%url 'account_logout'%}">Logout</a></li>
 						<li><a href="/my_account">My Account</a></li>
+						<li><a href="{%url 'account_logout'%}">Logout</a></li>
 						{% else %}
 						<li><a href="{%url 'account_login'%}">Login</a>/<a href="{%url 'account_signup'%}">Register</a></li>
 						{% endif %}
@@ -128,39 +119,13 @@
 					</div>
 				</div>
 
-				<div class="col-md-2 col-md-push-1">
-					<div class="gtco-widget">
-						<h3>Destination</h3>
-						<ul class="gtco-footer-links">
-							<li><a href="#">Europe</a></li>
-							<li><a href="#">Australia</a></li>
-							<li><a href="#">Asia</a></li>
-							<li><a href="#">Canada</a></li>
-							<li><a href="#">Dubai</a></li>
-						</ul>
-					</div>
-				</div>
-
-				<div class="col-md-2 col-md-push-1">
-					<div class="gtco-widget">
-						<h3>Hotels</h3>
-						<ul class="gtco-footer-links">
-							<li><a href="#">Luxe Hotel</a></li>
-							<li><a href="#">Italy 5 Star hotel</a></li>
-							<li><a href="#">Dubai Hotel</a></li>
-							<li><a href="#">Deluxe Hotel</a></li>
-							<li><a href="#">BoraBora Hotel</a></li>
-						</ul>
-					</div>
-				</div>
-
 				<div class="col-md-3 col-md-push-1">
 					<div class="gtco-widget">
 						<h3>Get In Touch</h3>
 						<ul class="gtco-quick-contact">
-							<li><a href="#"><i class="icon-phone"></i> +1 234 567 890</a></li>
-							<li><a href="#"><i class="icon-mail2"></i> info@freehtml5.co</a></li>
-							<li><a href="#"><i class="icon-chat"></i> Live Chat</a></li>
+							<li><a href="#"><i class="icon-phone"></i> +111-111-1111</a></li>
+							<li><a href="#"><i class="icon-mail2"></i> support@travoyage.com</a></li>
+							<li><a href="#"><i class="icon-chat"></i> Live Chat with Us</a></li>
 						</ul>
 					</div>
 				</div>
