--- a/templates/flight_details.html
+++ b/templates/flight_details.html
@@ -80,7 +80,7 @@
 
                             </div>
                             <div >
-                                <a class="btn btn-primary" href="{{ object.add_to_cart_url}}"> Proceed </a>
+                                <a class="btn btn-primary" href="{{ object.add_to_cart_url}}"> Proceed and Confirm</a>
                             </div>
                         </div>
                     </div>
