More added to destinations

--- a/templates/destination_details.html
+++ b/templates/destination_details.html
@@ -19,7 +19,7 @@
 					<div class="row row-mt-15em">
 
 						<div class="col-md-12 mt-text animate-box" data-animate-effect="fadeInUp">
-							<h1>Destinations</h1>
+							<h1>{{object.name}}</h1>
 						</div>
 
 					</div>
@@ -33,7 +33,7 @@
 		<div class="gtco-container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
-					<h2>{{object.name}}</h2>
+					<h2>Information</h2>
 					</div>
 			</div>
 			<div class="row">
@@ -51,19 +51,7 @@
 						</div>
 					</a>
 				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6">
-					<a href="{% static 'images/seoul.jpg' %}" class="fh5co-card-item image-popup">
-						<figure>
-							<div class="overlay"><i class="ti-plus"></i></div>
-							<img src="{% static 'images/seoul.jpg' %}" alt="Image" class="img-responsive">
-						</figure>
-						<div class="fh5co-text">
-							<h2>Seoul, South Korea</h2>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
-							<p><span class="btn btn-primary">More</span></p>
-						</div>
-					</a>
-				</div>
+
 				<div class="col-lg-4 col-md-4 col-sm-6">
 					<a href="{% static 'images/paris.jpg' %}" class="fh5co-card-item image-popup">
 						<figure>
